@@ -161,6 +161,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12180: Fixed a few remaining errors in test_packaging when no 
+  threading.
+
 - Issue #12175: RawIOBase.readall() now returns None if read() returns None.
 
 - Issue #12175: FileIO.readall() now raises a ValueError instead of an IOError
